# linux-computer-use

./: CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml
bridge/: bridge.py
mcp_server/: server.py
scripts/: setup-helper.mjs
src/: bridge.ts
