[project]
name = "linux-computer-use-mcp"
version = "0.2.0"
description = "MCP server: Linux/X11 computer-use tools (AT-SPI + xdotool) for Claude Code, OpenCode, and any MCP-aware agent."
requires-python = ">=3.10"
dependencies = ["mcp>=1.2.0"]
authors = [{name = "Tak1tak", email = "tak1tak@users.noreply.github.com"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["mcp", "computer-use", "linux", "x11", "at-spi", "xdotool", "claude-code", "opencode"]

[project.urls]
Homepage = "https://github.com/tak-uukti/linux-computer-use"
Issues = "https://github.com/tak-uukti/linux-computer-use/issues"

[project.scripts]
linux-computer-use-mcp = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.hatch.build.targets.wheel.force-include]
"bridge/bridge.py" = "bridge/bridge.py"
